[#1031] refactor(theme): remove themeId from FormLayoutElement and related components and move it to ProcessVersionEntity